qt/gen_qcombobox.h

class QAbstractItemDelegate;
class QAbstractItemModel;
class QAbstractItemView;
class QComboBox;
class QCompleter;
class QEvent;
class QIcon;
class QLineEdit;
class QMetaObject;
class QModelIndex;
class QSize;
class QValidator;
class QVariant;
class QWidget;
typedef struct QAbstractItemDelegate QAbstractItemDelegate;
typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QAbstractItemView QAbstractItemView;
typedef struct QChildEvent QChildEvent;
typedef struct QComboBox QComboBox;
typedef struct QCompleter QCompleter;
typedef struct QEvent QEvent;
typedef struct QIcon QIcon;
typedef struct QLineEdit QLineEdit;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QSize QSize;
typedef struct QValidator QValidator;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QComboBox_override_virtual_childEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_childEvent(void* self, QChildEvent* event);
bool QComboBox_override_virtual_customEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_customEvent(void* self, QEvent* event);
bool QComboBox_override_virtual_connectNotify(void* self, intptr_t slot);
void QComboBox_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QComboBox_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QComboBox_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QComboBox_staticMetaObject();
void QComboBox_delete(QComboBox* self);