qt/gen_qcombobox.nim

proc fQComboBox_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QComboBox_virtualbase_childEvent".}
proc fcQComboBox_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_childEvent".}
proc fQComboBox_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QComboBox_virtualbase_customEvent".}
proc fcQComboBox_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_customEvent".}
proc fQComboBox_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QComboBox_virtualbase_connectNotify".}
proc fcQComboBox_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_connectNotify".}
proc fQComboBox_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QComboBox_virtualbase_disconnectNotify".}
proc fcQComboBox_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_disconnectNotify".}
proc fcQComboBox_staticMetaObject(): pointer {.importc: "QComboBox_staticMetaObject".}
proc fcQComboBox_delete(self: pointer) {.importc: "QComboBox_delete".}


func init*(T: type QComboBox, h: ptr cQComboBox): QComboBox =
  T(h: h)
proc create*(T: type QComboBox, parent: gen_qwidget.QWidget): QComboBox =

  QComboBox.init(fcQComboBox_new(parent.h))
proc create*(T: type QComboBox, ): QComboBox =

  QComboBox.init(fcQComboBox_new2())
proc metaObject*(self: QComboBox, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQComboBox_metaObject(self.h))

proc metacast*(self: QComboBox, param1: cstring): pointer =

  fcQComboBox_metacast(self.h, param1)

proc metacall*(self: QComboBox, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQComboBox_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QComboBox, s: cstring): string =

  let v_ms = fcQComboBox_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QComboBox, s: cstring): string =

  let v_ms = fcQComboBox_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc maxVisibleItems*(self: QComboBox, ): cint =

  fcQComboBox_maxVisibleItems(self.h)

proc setMaxVisibleItems*(self: QComboBox, maxItems: cint): void =

  fcQComboBox_setMaxVisibleItems(self.h, maxItems)

proc count*(self: QComboBox, ): cint =

  fcQComboBox_count(self.h)

proc setMaxCount*(self: QComboBox, max: cint): void =

  fcQComboBox_setMaxCount(self.h, max)

proc maxCount*(self: QComboBox, ): cint =

  fcQComboBox_maxCount(self.h)

proc autoCompletion*(self: QComboBox, ): bool =

  fcQComboBox_autoCompletion(self.h)

proc setAutoCompletion*(self: QComboBox, enable: bool): void =

  fcQComboBox_setAutoCompletion(self.h, enable)

proc autoCompletionCaseSensitivity*(self: QComboBox, ): gen_qnamespace.CaseSensitivity =

  gen_qnamespace.CaseSensitivity(fcQComboBox_autoCompletionCaseSensitivity(self.h))

proc setAutoCompletionCaseSensitivity*(self: QComboBox, sensitivity: gen_qnamespace.CaseSensitivity): void =

  fcQComboBox_setAutoCompletionCaseSensitivity(self.h, cint(sensitivity))

proc duplicatesEnabled*(self: QComboBox, ): bool =

  fcQComboBox_duplicatesEnabled(self.h)

proc setDuplicatesEnabled*(self: QComboBox, enable: bool): void =

  fcQComboBox_setDuplicatesEnabled(self.h, enable)

proc setFrame*(self: QComboBox, frame: bool): void =

  fcQComboBox_setFrame(self.h, frame)

proc hasFrame*(self: QComboBox, ): bool =

  fcQComboBox_hasFrame(self.h)

proc findText*(self: QComboBox, text: string): cint =

  fcQComboBox_findText(self.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc findData*(self: QComboBox, data: gen_qvariant.QVariant): cint =

  fcQComboBox_findData(self.h, data.h)

proc insertPolicy*(self: QComboBox, ): QComboBoxInsertPolicy =

  QComboBoxInsertPolicy(fcQComboBox_insertPolicy(self.h))

proc setInsertPolicy*(self: QComboBox, policy: QComboBoxInsertPolicy): void =

  fcQComboBox_setInsertPolicy(self.h, cint(policy))

proc sizeAdjustPolicy*(self: QComboBox, ): QComboBoxSizeAdjustPolicy =

  QComboBoxSizeAdjustPolicy(fcQComboBox_sizeAdjustPolicy(self.h))

proc setSizeAdjustPolicy*(self: QComboBox, policy: QComboBoxSizeAdjustPolicy): void =

  fcQComboBox_setSizeAdjustPolicy(self.h, cint(policy))

proc minimumContentsLength*(self: QComboBox, ): cint =

  fcQComboBox_minimumContentsLength(self.h)

proc setMinimumContentsLength*(self: QComboBox, characters: cint): void =

  fcQComboBox_setMinimumContentsLength(self.h, characters)

proc iconSize*(self: QComboBox, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQComboBox_iconSize(self.h))

proc setIconSize*(self: QComboBox, size: gen_qsize.QSize): void =

  fcQComboBox_setIconSize(self.h, size.h)

proc setPlaceholderText*(self: QComboBox, placeholderText: string): void =

  fcQComboBox_setPlaceholderText(self.h, struct_miqt_string(data: placeholderText, len: csize_t(len(placeholderText))))

proc placeholderText*(self: QComboBox, ): string =

  let v_ms = fcQComboBox_placeholderText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc isEditable*(self: QComboBox, ): bool =

  fcQComboBox_isEditable(self.h)

proc setEditable*(self: QComboBox, editable: bool): void =

  fcQComboBox_setEditable(self.h, editable)

proc setLineEdit*(self: QComboBox, edit: gen_qlineedit.QLineEdit): void =

  fcQComboBox_setLineEdit(self.h, edit.h)

proc lineEdit*(self: QComboBox, ): gen_qlineedit.QLineEdit =

  gen_qlineedit.QLineEdit(h: fcQComboBox_lineEdit(self.h))

proc setValidator*(self: QComboBox, v: gen_qvalidator.QValidator): void =

  fcQComboBox_setValidator(self.h, v.h)

proc validator*(self: QComboBox, ): gen_qvalidator.QValidator =

  gen_qvalidator.QValidator(h: fcQComboBox_validator(self.h))

proc setCompleter*(self: QComboBox, c: gen_qcompleter.QCompleter): void =

  fcQComboBox_setCompleter(self.h, c.h)

proc completer*(self: QComboBox, ): gen_qcompleter.QCompleter =

  gen_qcompleter.QCompleter(h: fcQComboBox_completer(self.h))

proc itemDelegate*(self: QComboBox, ): gen_qabstractitemdelegate.QAbstractItemDelegate =

  gen_qabstractitemdelegate.QAbstractItemDelegate(h: fcQComboBox_itemDelegate(self.h))

proc setItemDelegate*(self: QComboBox, delegate: gen_qabstractitemdelegate.QAbstractItemDelegate): void =

  fcQComboBox_setItemDelegate(self.h, delegate.h)

proc model*(self: QComboBox, ): gen_qabstractitemmodel.QAbstractItemModel =

  gen_qabstractitemmodel.QAbstractItemModel(h: fcQComboBox_model(self.h))

proc setModel*(self: QComboBox, model: gen_qabstractitemmodel.QAbstractItemModel): void =

  fcQComboBox_setModel(self.h, model.h)

proc rootModelIndex*(self: QComboBox, ): gen_qabstractitemmodel.QModelIndex =

  gen_qabstractitemmodel.QModelIndex(h: fcQComboBox_rootModelIndex(self.h))

proc setRootModelIndex*(self: QComboBox, index: gen_qabstractitemmodel.QModelIndex): void =

  fcQComboBox_setRootModelIndex(self.h, index.h)

proc modelColumn*(self: QComboBox, ): cint =

  fcQComboBox_modelColumn(self.h)

proc setModelColumn*(self: QComboBox, visibleColumn: cint): void =

  fcQComboBox_setModelColumn(self.h, visibleColumn)

proc currentIndex*(self: QComboBox, ): cint =

  fcQComboBox_currentIndex(self.h)

proc currentText*(self: QComboBox, ): string =

  let v_ms = fcQComboBox_currentText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc currentData*(self: QComboBox, ): gen_qvariant.QVariant =

  gen_qvariant.QVariant(h: fcQComboBox_currentData(self.h))

proc itemText*(self: QComboBox, index: cint): string =

  let v_ms = fcQComboBox_itemText(self.h, index)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc itemIcon*(self: QComboBox, index: cint): gen_qicon.QIcon =

  gen_qicon.QIcon(h: fcQComboBox_itemIcon(self.h, index))

proc itemData*(self: QComboBox, index: cint): gen_qvariant.QVariant =

  gen_qvariant.QVariant(h: fcQComboBox_itemData(self.h, index))

proc addItem*(self: QComboBox, text: string): void =

  fcQComboBox_addItem(self.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc addItem2*(self: QComboBox, icon: gen_qicon.QIcon, text: string): void =

  fcQComboBox_addItem2(self.h, icon.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc addItems*(self: QComboBox, texts: seq[string]): void =

  var texts_CArray = newSeq[struct_miqt_string](len(texts))
  for i in 0..<len(texts):
    texts_CArray[i] = struct_miqt_string(data: texts[i], len: csize_t(len(texts[i])))

  fcQComboBox_addItems(self.h, struct_miqt_array(len: csize_t(len(texts)), data: if len(texts) == 0: nil else: addr(texts_CArray[0])))

proc insertItem*(self: QComboBox, index: cint, text: string): void =

  fcQComboBox_insertItem(self.h, index, struct_miqt_string(data: text, len: csize_t(len(text))))

proc insertItem2*(self: QComboBox, index: cint, icon: gen_qicon.QIcon, text: string): void =

  fcQComboBox_insertItem2(self.h, index, icon.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc insertItems*(self: QComboBox, index: cint, texts: seq[string]): void =

  var texts_CArray = newSeq[struct_miqt_string](len(texts))
  for i in 0..<len(texts):
    texts_CArray[i] = struct_miqt_string(data: texts[i], len: csize_t(len(texts[i])))

  fcQComboBox_insertItems(self.h, index, struct_miqt_array(len: csize_t(len(texts)), data: if len(texts) == 0: nil else: addr(texts_CArray[0])))

proc insertSeparator*(self: QComboBox, index: cint): void =

  fcQComboBox_insertSeparator(self.h, index)

proc removeItem*(self: QComboBox, index: cint): void =

  fcQComboBox_removeItem(self.h, index)

proc setItemText*(self: QComboBox, index: cint, text: string): void =

  fcQComboBox_setItemText(self.h, index, struct_miqt_string(data: text, len: csize_t(len(text))))

proc setItemIcon*(self: QComboBox, index: cint, icon: gen_qicon.QIcon): void =

  fcQComboBox_setItemIcon(self.h, index, icon.h)

proc setItemData*(self: QComboBox, index: cint, value: gen_qvariant.QVariant): void =

  fcQComboBox_setItemData(self.h, index, value.h)

proc view*(self: QComboBox, ): gen_qabstractitemview.QAbstractItemView =

  gen_qabstractitemview.QAbstractItemView(h: fcQComboBox_view(self.h))

proc setView*(self: QComboBox, itemView: gen_qabstractitemview.QAbstractItemView): void =

  fcQComboBox_setView(self.h, itemView.h)

proc sizeHint*(self: QComboBox, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQComboBox_sizeHint(self.h))

proc minimumSizeHint*(self: QComboBox, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQComboBox_minimumSizeHint(self.h))

proc showPopup*(self: QComboBox, ): void =

  fcQComboBox_showPopup(self.h)

proc hidePopup*(self: QComboBox, ): void =

  fcQComboBox_hidePopup(self.h)

proc event*(self: QComboBox, event: gen_qcoreevent.QEvent): bool =

  fcQComboBox_event(self.h, event.h)

proc inputMethodQuery*(self: QComboBox, param1: gen_qnamespace.InputMethodQuery): gen_qvariant.QVariant =

  gen_qvariant.QVariant(h: fcQComboBox_inputMethodQuery(self.h, cint(param1)))

proc inputMethodQuery2*(self: QComboBox, query: gen_qnamespace.InputMethodQuery, argument: gen_qvariant.QVariant): gen_qvariant.QVariant =

  gen_qvariant.QVariant(h: fcQComboBox_inputMethodQuery2(self.h, cint(query), argument.h))

proc clear*(self: QComboBox, ): void =

  fcQComboBox_clear(self.h)

proc clearEditText*(self: QComboBox, ): void =

  fcQComboBox_clearEditText(self.h)

proc setEditText*(self: QComboBox, text: string): void =

  fcQComboBox_setEditText(self.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc setCurrentIndex*(self: QComboBox, index: cint): void =

  fcQComboBox_setCurrentIndex(self.h, index)

proc setCurrentText*(self: QComboBox, text: string): void =
